# nobodynamed-video

./: .env.example  .gitignore  .ruff.toml  AGENTS.md  ARCHITECTURE.md  FEEDBACK.md  LICENSE  Makefile  README.md  RUNBOOK.md  THIRD_PARTY_NOTICES.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
batches/: AGENTS.md  hooks.yaml  narratives.yaml  smoke.yaml  week-1.yaml  week-2.yaml
docs/superpowers/plans/: 2026-05-20-caption-compositor.md
fixtures/: captions.yaml  cultural_events.yaml  ssa.sqlite
fixtures/golden/bertha-2024/: hook_f00.sha256  manifest.json  reveal_f00.sha256
fixtures/golden/bertha-2025/: hook_f00.sha256  reveal_f00.sha256
fixtures/golden/charlotte-2024/: reveal_f00.sha256
fixtures/golden/dorothy-2024/: hook_f00.sha256  reveal_f00.sha256
fixtures/golden/eleanor-2024/: reveal_f00.sha256
fixtures/golden/emma-2024/: reveal_f00.sha256
fixtures/golden/hazel-2024/: reveal_f00.sha256
fixtures/golden/jennifer-2024/: reveal_f00.sha256
fixtures/golden/karen-2024/: reveal_f00.sha256
satori-service/: package.json  pnpm-lock.yaml  tsconfig.json
satori-service/src/: fonts.ts  render.ts  server.ts
scripts/: build_fixture.py  doctor.py  fetch_ssa.py
src/nobodynamed_video/: cli.py  config.py  exceptions.py  models.py  seed.py
tests/: test_caption.py  test_classifier.py  test_comparison.py  test_config.py  test_ctx.py  test_ffmpeg.py  test_frame_planner.py  test_hooks.py  test_hyperframes.py  test_motion.py  test_narratives.py  test_release_operations.py  test_satori_client.py  test_smoke.py  test_truth_safety.py
(+48 files in other folders)
